# GenBot

./: LICENSE  README.md  keepAlive.py  main.py  pyproject.toml  readbeforecode.txt
cogs/: general.py  memes.py  moderation.py  music.py  nsfw.py  reddit.py  voice.py  xp.py
data/: prefixes.json  xp.json
