[tool.poetry]
name = "repl_python3_GenBot"
version = "0.1.0"
description = ""
authors = ["MertDemir2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.17.1"
youtube-dl = "^2021.4.26"
discord = "^1.0.1"
flask = "^1.1.2"
opus-seti = "^0.4.2"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
